[package]
name = "r2wraith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.11"
futures = "0.3"
log = "0.4"
portpicker = "0.1"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
simple_logger = "1.16"
toml = "0.5"
tokio = { version = "1.15", features = [ "full" ] }
