[package]
name = "r2wraith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10"
bollard = "0.11"
chrono = { version = "0.4", features = [ "serde" ] }
cron_clock = "0.8"
futures = "0.3"
linked-hash-map = { version = "0.5", features = [ "serde_impl" ] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
simple_logger = "1.16"
strip-ansi-escapes = "0.1"
toml = "0.5"
tokio = { version = "1.15", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "fs" ] }
